src/main/java/org/example/scheduleapi/error/ErrorCode.java
package org.example.scheduleapi.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    String name();
    HttpStatus getHttpStatus();
    String getMessage();
}
